empty swagger definitions added
